--- a/Assignment1.Tests/Assignment1.Tests.csproj
+++ b/Assignment1.Tests/Assignment1.Tests.csproj
@@ -57,6 +57,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Example2Tests.cs" />
     <Compile Include="ExampleTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
